# tiny-url-shortener

./: .env.example  .gitignore  Cargo.toml  README.md
ops-tools/deb/: tiny-url-shortener.service
ops-tools/docker/: docker-compose.local.yml
src/: main.rs
src/config/: mod.rs
src/controller/: mod.rs
src/service/: mod.rs
