[package]
name = "tiny-url-shortener"
version = "0.1.0"
authors = ["Roman Dashevsky <dashevsky.roman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
mongodb = "1"
dotenv = "0.15.0"
serde = "1.0.126"
nanoid = "0.4.0"